--- a/package.json
+++ b/package.json
@@ -15,21 +15,29 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@shadcn/ui": "^0.0.4",
     "apexcharts": "^3.52.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "chart.js": "^2.9.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.3.30",
     "gsap": "^3.12.5",
     "http-proxy-middleware": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
