--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "recharts": "^2.12.7",
